<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Notify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="application_has_no_access">This application needs special permissions to be able to access list of notifications. Open Settings app to grant such access?</string>
	<string name="open_settings">Open Settings</string>
	<string name="cancel_quit">Cancel(Quit)</string>
	<string name="action_edit_applications">Edit Applications</string>
	
	<string name="hide_btn">Btn</string>
	<string name="min">min</string>
	
	<string name="notification_service">Notification Service:</string>
		
	<string name="showhideapps">Show/Hide applications:</string>
	<string name="select_apps">Select applications to handle:</string>
	<string name="showhidefootnote">Applications to display on the main screen:</string>
	<string name="google_dialer_warning">Warning: you are trying to set notifications for Google Dialer application. You won\'t receive notifications about missed calls if you select this app. Select application \"Phone\" instead.</string>
	
	<string name="no_apps">It is lonely here, go to \'Edit Applications\' and select applications to show here</string>
	
	<string name="app_icon_content_descr">App Icon</string>
	
	<string name="example_app">Example Application</string>
	
	<string name="unmute">UnMute</string>
	<string name="app_muted">SmartNotify Muted</string>
	
	<string name="mute">Mute</string>
	<string name="app_unmuted">SmartNotify</string>
	
	<string name="app_updated">SmartNotify updated</string>
	<string name="reenable_app">Please re-enable SmartNotify</string>
	
	<string name="menutitle_handled_apps">HANDLED APPLICATIONS</string>
	<string name="menutitle_recent_notificatoins">RECENT NOTIFICATIONS</string>
	<string name="menutitle_common_notifications">COMMON NOTIFICATIONS</string>
	<string name="menutitle_other_apps">OTHER APPLICATIONS</string>
	
	<string name="notification_hint_app">app</string>
	<string name="notification_hint_apps">apps</string>
	<string name="notification_hint_every">, every</string>	
	<string name="notification_hint_min">min</string>
	<string name="notification_hint_mins">mins</string>

	<string name="error_cannot_parse">Cannot parse pattern</string>
	
	<string name="on">ON</string>
	<string name="off">OFF</string>
	
	<string name="every_nmin_fmt">every %1$d mins (click to change)</string>
    <string name="exit">Exit</string>
    <string name="ignore_batter_optimisations_title">Allow to ignore battery optimisations?</string>
	<string name="ignore_batter_optimisations_details">This is required in order to avoid missing notifications</string>
	<string name="ignore_batter_optimisations_yes">Yes, please</string>
	<string name="ignore_batter_optimisations_later">Later</string>

</resources>
