<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/mute" />

    <LinearLayout
        android:id="@+id/layoutTextGroup" 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonMute"
        android:layout_toRightOf="@+id/imageViewAppLogo"
        android:layout_marginTop="6dp" 
        android:layout_marginBottom="6dp"
		android:layout_marginLeft="8dp"
        >
        
    <TextView
        android:id="@+id/textViewNotificationText"
        android:text="@string/app_unmuted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewSmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
		android:textAppearance="?android:attr/textAppearanceSmall" 
		/>
    
    </LinearLayout>
 
    <ImageView
        android:id="@+id/imageViewAppLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
		android:layout_margin="8dp"
        android:background="@drawable/ic_notification"
        android:contentDescription="@string/app_icon_content_descr"
        /> 
   
</RelativeLayout>